--- a/src/views/layouts/login.html
+++ b/src/views/layouts/login.html
@@ -1,10 +1,19 @@
-   <!-- <div>
-       <div>
+   <div class="login">
+       <div class="login-main"> 
            <div class="login-left">
-
+                    logo
            </div>
-           <div class="login-rigth">
-
+           <div class="login-right">
+            <h2 class="login-right_top">Welcome back!</h2>
+            <div>Please login to continue</div>
+            <div>Email address</div>
+            <input>
+            <div>Email address</div>
+            <div>Forgot password?</div>
+            <input>
+            <button>Button Text</button>
+            <div>New to Scratch?</div>
+            <div>Button Text</div>
            </div>
        </div>
-   </div>  -->
+   </div> 
