--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,6 +22,7 @@
 // ----------------------------------------------------------------------
 @import 'layout/common';
 @import 'layout/header';
+@import 'layout/home';
 @import 'layout/login';
 @import 'layout/footer';
 @import 'layout/hero';
