--- a/src/views/pages/login.html
+++ b/src/views/pages/login.html
@@ -10,9 +10,10 @@
   <body>
     <div class="wrapper">
       <!-- include header.html -->
-      @@include('../layouts/header.html')
+    
        <!-- include main.html -->
-      @@include('../layouts/home.html')
+      @@include('../layouts/login.html')
+      
       <!-- include footer.html -->
       <!-- @@include('../layouts/footer.html') -->
     </div>
