--- a/src/views/layouts/login.html
+++ b/src/views/layouts/login.html
@@ -1,19 +1,32 @@
    <div class="login">
-       <div class="login-main"> 
+       <div class="login-main">
            <div class="login-left">
-                    logo
+               LOGO
            </div>
            <div class="login-right">
-            <h2 class="login-right_top">Welcome back!</h2>
-            <div>Please login to continue</div>
-            <div>Email address</div>
-            <input>
-            <div>Email address</div>
-            <div>Forgot password?</div>
-            <input>
-            <button>Button Text</button>
-            <div>New to Scratch?</div>
-            <div>Button Text</div>
+               <div class="login-right_top">
+                   Welcome back!
+               </div>
+               <p>
+                   Please login to continue
+               </p>
+               <div class="input">
+                   <div class="input-email">
+                       Email address
+                   </div>
+                   <input class="input-name">
+                   <div class="input-w">
+                       <div class="input-password">
+                           Email address
+                       </div>
+                       <div class="input-forgot">
+                           Forgot password?
+                       </div>
+                   </div>
+                   <input class="input-name">
+               </div>
+               <button class="button-input">Button Text</button>
+               <div class="login-new">New to Scratch?</div>
            </div>
        </div>
-   </div> 
+   </div>
