--- a/src/views/pages/index.html
+++ b/src/views/pages/index.html
@@ -12,7 +12,28 @@
       <!-- include header.html -->
       @@include('../layouts/header.html')
        <!-- include main.html -->
-      @@include('../layouts/home.html')
+       <main class="main">
+        <div class="container-fluid">
+            <p class="main-text">
+                Join over 50 milions people sharingrecipes everyday
+            </p>
+            <p class="main-bottom">
+                Never run out ideas again. Try new foods, ingredient, cooking style,and more
+            </p>
+            <div class="button"  >
+                <div class="main-button" href="../../login.html">
+                    <a href="../../login.html" >
+                        Button Text
+                    </a>
+                </div>
+                <div class="main-button1">
+                    <a href="../../login.html" >
+                        Button Text
+                    </a>
+                </div>
+            </div>
+        </div>
+      </main>
       <!-- include footer.html -->
       <!-- @@include('../layouts/footer.html') -->
     </div>
