--- a/src/views/pages/login.html
+++ b/src/views/pages/login.html
@@ -8,43 +8,28 @@
   </head>
 
   <body>
-  
     <div class="login">
       <div class="login-main">
-          <div class="login-left">
-              LOGO
+        <div class="login-left">LOGO</div>
+        <div class="login-right">
+          <div class="login-right-title">Welcome back!</div>
+          <p>Please login to continue</p>
+          <div class="input">
+            <div class="input-email">Email address</div>
+                <input class="input-name" />
+            <div class="input-w">
+              <div class="input-password">Email address</div>
+              <div class="input-forgot">Forgot password?</div>
+            </div>
+                <input class="input-name" />
           </div>
-          <div class="login-right">
-              <div class="login-right_top">
-                  Welcome back!
-              </div>
-              <p>
-                  Please login to continue
-              </p>
-              <div class="input">
-                  <div class="input-email">
-                      Email address
-                  </div>
-                  <input class="input-name">
-                  <div class="input-w">
-                      <div class="input-password">
-                          Email address
-                      </div>
-                      <div class="input-forgot">
-                          Forgot password?
-                      </div>
-                  </div>
-                  <input class="input-name">
-              </div>
-              <button class="button-input">
-              Button Text 
-               </button>
-               <div class="login-news">
-                   <a class="login-new" href="./singUp.html">New to Scratch?</a>
-               </div>
+          <button class="button-input">Button Text</button>
+          <div class="login-news">
+            <a class="login-new" href="./signUp.html">New to Scratch?</a>
           </div>
+        </div>
       </div>
-  </div>
+    </div>
     @@include('../layouts/scripts.html')
   </body>
 </html>
