--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -37,7 +37,7 @@
 // Pages
 // ----------------------------------------------------------------------
 
-@import 'pages/singup';
+@import 'pages/signup';
 @import 'pages/home';
 @import 'pages/login';
 // ----------------------------------------------------------------------
