--- a/src/styles/pages/_signup.scss
+++ b/src/styles/pages/_signup.scss
@@ -1,8 +1,8 @@
-
-.singUp{
+.signUp {
     @extend %login;
-  }
-  .singUp::before{
+}
+
+.signUp::before {
     content: "";
     position: absolute;
     width: 1440px;
@@ -12,43 +12,60 @@
     opacity: 0.6;
     background-size: 100%;
 }
-.singUp-main{
+.input-signUp{
+    margin-top: 30px;
+}
+.signUp-main {
     @extend %loginMain;
 }
-.singUp-left{
+
+.signUp-left {
     @extend %loginLeft;
 }
-.singUp-right_top{
+
+.signUp-right-title {
     @extend %loginRightTop;
 }
-.singUp-right{
+
+.signUp-right {
     margin-left: 50px;
-    p{
+
+    p {
         width: 200px;
         height: 22px;
         font-size: 14px;
         color: #606060;
-        margin-top:10px
+        margin-top: 10px;
     }
 }
 
-.input-email{
+.input-email {
     @extend %inputEmail;
     margin-top: 10px;
 }
-.input-name{
-    @extend %inputName;
+
+.button-signUp {
+    @extend %buttonInput;
+    margin-top: 10px;
 }
 
-.button-singUp{
-    @extend %buttonInput;
+.signUp-new {
+    @extend %loginNew;
 }
-.singUp-new{
-    @extend %loginNew
+.singUp-input{
+    margin-top: 35px;
 }
-.singUp-news{
+.signUp-news {
     width: 325px;
     height: 25px;
     display: flex;
-    justify-content: center ;
+    justify-content: center;
+}
+.button-singUp-text{
+    border: none;
+    color: #30BE76;
+    background-color: white;
+    display: flex;
+    width: 325px;
+    justify-content: center;
 }
