--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -40,6 +40,7 @@
 @import 'pages/signup';
 @import 'pages/home';
 @import 'pages/login';
+@import 'pages/feed';
 // ----------------------------------------------------------------------
 // Responsive
 // ----------------------------------------------------------------------
