--- a/src/views/pages/index.html
+++ b/src/views/pages/index.html
@@ -26,9 +26,9 @@
                         Button Text
                     </a>
                 </div>
-                <div class="main-button">
-                    <a href="../../login.html" >
-                        Button Text
+                <div class="main-button" href="../../feed.html">
+                    <a href="../../feed.html" >
+                        Button Feed
                     </a>
                 </div>
             </div>
