--- a/src/views/layouts/header.html
+++ b/src/views/layouts/header.html
@@ -1,6 +1,6 @@
-<nav class="navbar ">
+<nav class="navbar">
   <div class="logo">
-    <a>LOGO</a>
+    <a href="#">LOGO</a>
     <div>4 pieces 1/2-inch thick pieces brioche</div>
   </div>
   <div class="search">
