--- a/src/styles/pages/_feed.scss
+++ b/src/styles/pages/_feed.scss
@@ -139,7 +139,7 @@
   margin-top: 50px;
   padding: 15px;
 
-  div {
+  h2 {
     margin-left: 10px;
     width: 100%;
     height: 25px;
@@ -205,7 +205,7 @@
   box-shadow: 0 0 5px 2px #b9b9b9
 }
 
-.card-top {
+.feed__card--top {
   width: 100%;
   display: grid;
   grid-template-columns: auto auto;
