--- a/src/views/layouts/header.html
+++ b/src/views/layouts/header.html
@@ -4,12 +4,12 @@
     <div>4 pieces 1/2-inch thick pieces brioche</div>
   </div>
   <div class="search">
-    <img class="search__icon" src="https://img.icons8.com/ios/50/000000/search--v1.png" />
+    <img class="search__icon" src="../../img/search--v1-50.png" />
     <input class="search__input" placeholder="Search Recipe Profile, or Ingredients" />
   </div>
   <div class="narbar__right">
-    <img class="narbar__right--notification" src="https://img.icons8.com/ios/50/000000/appointment-reminders--v1.png" />
-    <img class="narbar__right--mailbox" src="https://img.icons8.com/ios/50/000000/mail.png" />
-    <img class="narbar__right--avt" src="https://img.icons8.com/ios/50/000000/user-male-circle.png" />
+    <img class="narbar__right--notification" src="../../img/appointment-reminders--v1-50.png" />
+    <img class="narbar__right--mailbox" src="../../img/mail-50.png" />
+    <img class="narbar__right--avt" src="../../img/avt-01.jpeg" />
   </div>
 </nav>
