--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -2,7 +2,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-smoothing: antialiased;
-  max-width: 1440px;
 }
 .wrapper{
   position: relative;
@@ -77,6 +76,7 @@ body {
   width: 38px;
   height: auto;
   cursor: pointer;
+  border-radius: 50%;
 }
 
 
