feature/updated-UI-feed-two

--- a/src/styles/pages/_feed.scss
+++ b/src/styles/pages/_feed.scss
@@ -1,6 +1,6 @@
 .feed__container {
   display: grid;
-  grid-template-columns: 30% 40% 30%;
+  grid-template-columns: 28% 44% 28%;
   margin: 50px 50px
     /* grid-template-rows: 100px 100px; */
 }
@@ -32,10 +32,11 @@
 }
 
 .feed__profile--avt {
-  width: 100%;
-  height: auto;
+  width: 78px;
+  height: 78px;
   grid-column: 1/2;
   border-radius: 100%;
+  object-fit: cover;
 }
 
 .profile-right {
@@ -48,14 +49,18 @@
 }
 
 .feed__profile--name {
+  display: flex;
   width: 100%;
   height: 25px;
   grid-column: 1/4;
   font-weight: 600;
   font-size: 16px;
+  align-items: center;
 }
 
 .feed__profile--title {
+  display: flex;
+  align-items: center;
   width: 100%;
   height: 25px;
   grid-column: 1/4;
@@ -64,13 +69,32 @@
 }
 
 .feed__profile--follower {
+  display: flex;
+  align-items: center;
   width: 100%;
   height: 25px;
   grid-column: 1/2;
   font-size: 14px;
   color: #606060;
 }
+
+.feed__profile--dots{
+  width: 100%;
+  height: 23px;
+  line-height: 23px;
+
+  display: flex;
+  align-items: center;
+  div{
+    width: 4px;
+    height: 4px;
+    background-color:  #979797;
+    border-radius: 50%;
+  }
+}
 .feed__profile--like {
+  display: flex;
+  align-items: center;
   width: 100%;
   height: 25px;
   grid-column: 3/4;
@@ -90,47 +114,63 @@
   grid-column: 1/2;
   position: relative;
 
-  div:first-child {
+  h2:first-child {
     position: absolute;
     top: 25%;
     left: 25%;
+    color: #030F09;
+    font-size: 20px;
     transform: translate(-50%, -50%);
   }
 
   div:last-child {
     margin-top: 25px;
+    color: #030F09;
+    opacity: 0.5;
+    font-size: 16px;
   }
 }
 
 .profile__bottom--saved {
   grid-column: 2/3;
   position: relative;
-
-  div:first-child {
+ 
+  h2:first-child {
     position: absolute;
     top: 25%;
     left: 25%;
+    color: #030F09;
+    font-size: 20px;
     transform: translate(-50%, -50%);
   }
 
   div:last-child {
     margin-top: 25px;
+    color: #030F09;
+    opacity: 0.5;
+    font-size: 16px;
   }
 }
 
 .profile__bottom--following {
   grid-column: 3/4;
   position: relative;
-
-  div:first-child {
+  color: #030F09;
+  font-size: 20px;
+  h2:first-child {
     position: absolute;
     top: 25%;
     left: 25%;
+    color: #030F09;
+    font-size: 20px;
     transform: translate(-50%, -50%);
   }
 
   div:last-child {
     margin-top: 25px;
+    color: #030F09;
+    opacity: 0.5;
+    font-size: 16px;
   }
 }
 
@@ -150,11 +190,11 @@
   }
 
   ul li {
-    width: 100%;
+    
     height: 22px;
     font-size: 14px;
     color: #606060;
-    margin: 10px;
+    margin: 15px;
   }
 }
 
@@ -216,14 +256,16 @@
 .card__top-avt {
   grid-column: 1/2;
   grid-row: 1/2;
-  width: 100%;
-  height: auto;
+  width: 43px;
+  height: 43px;
   border-radius: 50%;
+  object-fit: cover;
 }
 
 .card__top-name {
   grid-column: 2/3;
-  width: 100%;
+  width: auto ;
+  height: auto;
   margin-left: 15px;
 
   h1 {
@@ -232,6 +274,7 @@
   }
 
   p {
+    
     font-size: 12px;
     color: #606060;
   }
@@ -240,6 +283,7 @@
 .card-img {
   width: 100%;
   height: 200px;
+  object-fit: cover;
 }
 
 .card-bottom {
@@ -247,7 +291,7 @@
   grid-template-columns: 50% 50%;
   justify-content: flex-end;
   position: relative;
-  padding: 0px 10px;
+  padding: 0px 16px;
 
 }
 
@@ -268,6 +312,7 @@
 
 .card__bottom--description {
   grid-column: 1/3;
+  width: 57%;
   font-size: 14px;
   color: #A8A8A8;
   margin-top: 10px;
@@ -321,49 +366,68 @@
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 8px;
-
+padding: 25px;
   ul li {
     font-size: 14px;
     color: #030F09;
-    margin: 15px;
+    margin: 10px 0px;
     width: 100%-15;
     height: 35px;
     line-height: 35px;
-    padding-left: 10px;
+    cursor: pointer;
   }
 
-  ul li:last-child {
-    background-color: #30BE76;
-    border-radius: 8px;
-  }
+  
+  
 }
 
-
+.feed__modal--Veggies{
+  position: relative;
+  opacity: 0.99;
+  border-radius: 8px;
+  width: 100%;
+  cursor: pointer;
+}
+.feed__modal--Veggies::before{
+  content: "";
+  position: absolute;
+  width: 256px;
+  margin-left: -10px;
+  height: 35px;
+  border-radius: 8px;
+  z-index: -1;
+  opacity: 0.2;
+  cursor: pointer;
+  background-color: #30BE76 ;
+}
 .card-main {
-  opacity: 0.5;
-  background-color: rgb(54, 53, 53);
+
+  opacity: 0.8;
+  background: rgba(40,41,40,0.50);
 }
 
 .feed__modal--title {
   font-size: 20px;
   font-weight: 700;
   width: 150px;
-  margin: 15px;
+  
 }
 
 .feed__modal--icon {
   width: 24px;
   height: auto;
-  margin: 15px;
+  margin: 25px;
   position: absolute;
   right: 0%;
   top: 0%;
+  cursor: pointer;
 }
 
 .feed__modal--button {
+  margin-top: 15px;
   border: none;
   color: #30BE76;
-  margin-left: 15px;
+   padding: 0px;
   background-color: white;
 }
 
@@ -398,7 +462,8 @@
 .feed-card-follow {
   display: grid;
   grid-template-columns: 33.3% 33.3% 33.3%;
-  width: 100%
+  width: 100%;
+  padding: 10px;
 }
 
 .card-follow-one {
@@ -407,7 +472,8 @@
 }
 
 .card-follow {
-  width: 100% -5;
+  border-radius: 8px;
+  width: auto;
   height: 250px;
   position: relative;
   margin: 5px;
@@ -417,21 +483,25 @@
 .card__follow--background {
   width: 100%;
   height: 110px;
+  object-fit: cover; 
 }
 
 .card__follow--avt {
+  object-fit: cover; 
   position: absolute;
   width: 80px;
-  height: auto;
+  height: 80px;
   background-color: white;
   top: 45%;
   left: 50%;
+  border: 4px solid white;
   border-radius: 99999px;
   transform: translate(-50%, -50%);
+  object-fit: cover;
 }
 
 .card__follow--name {
-  margin-top: 40px;
+  margin-top: 45px;
   text-align: center;
 }
 
@@ -499,9 +569,28 @@
     width: 100%;
     height: 152px;
     border-radius: 8px;
+    object-fit: cover; 
   }
 }
-
+.feed__right--avt{
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+}
+.feed__right-avt--one{
+  grid-column: 1/2;
+}
+.feed__right-avt--tưo{
+  grid-column: 2/3;
+}
+.feed__right-avt--three{
+  grid-column: 3/4;
+}
+.feed__right-avt--four{
+  grid-column: 4/5;
+}
+.feed__right-avt--five{
+  grid-column: 5/6;
+}
 .feed__right--contact {
   width: 100%;
   height: 113px;
@@ -519,7 +608,8 @@
     border-radius: 50%;
     margin: 10px 10px;
     width: 40px;
-    height: auto;
+    height: 40px;
+    object-fit: cover;
   }
 }
 
@@ -535,7 +625,7 @@
 
   div {
     display: flex;
-    font-size: 14px;
+    font-size: 13px;
     color: #767676;
     margin: 10px;
   }
