--- a/src/views/pages/index.html
+++ b/src/views/pages/index.html
@@ -10,7 +10,10 @@
   <body>
     <div class="wrapper">
       <!-- include header.html -->
-      @@include('../layouts/header.html')
+      <!-- @@include('../layouts/header.html') -->
+      <div class="header-logo">
+        <a class="index__logo" href="#">LOGO</a>
+      </div>
        <!-- include main.html -->
        <main class="main">
         <div class="container-fluid">
