--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -23,7 +23,7 @@ body {
   background-color: white;
   display: flex;
   padding: 0px 50px;
- box-shadow: 2px 0px 7px 2px  #A8A8A8;
+  box-shadow: 0 6px 20px 0 rgba(13,51,32,0.10);
 }
 .logo{
   display: flex;
@@ -74,13 +74,21 @@ body {
 }
 .narbar__right--avt{
   width: 38px;
-  height: auto;
+  height: 38px;
   cursor: pointer;
   border-radius: 50%;
+  object-fit: cover;
 }
 
-
-
+.index__logo{
+  margin-left: 70px;
+  font-size: 30px;
+}
+.header-logo{
+  width:100%;
+  height: 180px;
+  line-height: 180px;
+}
 
 
 
