--- a/src/views/pages/feed.html
+++ b/src/views/pages/feed.html
@@ -20,31 +20,34 @@
           <div class="profile-top">
             <img class="feed__profile--avt" src="../../img/avt-01.jpeg" />
             <div class="profile-right">
-                <h2 class="feed__profile--name">
-                  Nick Evans
-                </h2>
-                <div class="feed__profile--title">
-                  Potato Master
-                </div>
-                <div class="feed__profile--follower">
-                  580 followers
-                </div>
-                <div class="feed__profile--like">
-                  23k likes
-                </div>
+              <h2 class="feed__profile--name">
+                Nick Evans
+              </h2>
+              <div class="feed__profile--title">
+                Potato Master
+              </div>
+              <div class="feed__profile--follower">
+                580 followers
+              </div>
+              <div class="feed__profile--dots">
+                <div></div>
+              </div>
+              <div class="feed__profile--like">
+                23k likes
+              </div>
             </div>
           </div>
           <div class="profile-bottom">
             <div class="profile__bottom--recipes">
-              <div>20</div>
+              <h2>20</h2>
               <div>Recipes</div>
             </div>
             <div class="profile__bottom--saved">
-              <div> 75</div>
+              <h2> 75</h2>
               <div>Saved</div>
             </div>
             <div class="profile__bottom--following">
-              <div>248</div>
+              <h2>248</h2>
               <div>Following</div>
             </div>
           </div>
@@ -74,7 +77,7 @@
               </div>
               <div class="card__top-name">
                 <h1>Profile Name</h1>
-                <p>To serve, drizzle raspberry preserves over each waffle, and top with raspbrries. if whipped cream to
+                <p>To serve, drizzle raspberry preserves over each waffle, and top with rasy. if whipped cream to
                   each waffle.</p>
               </div>
             </div>
@@ -83,8 +86,7 @@
             </div>
             <div class="card-bottom">
               <div class="card__bottom--title">Red Wine and Mint Soufflé</div>
-              <img class="card__bottom--icon"
-                src="../../img/filled-like-24.png" />
+              <img class="card__bottom--icon" src="../../img/filled-like-24.png" />
               <div class="card__bottom--description">Apparently we had reached a great height in the atmosphere, for the
                 sky was</div>
               <div class="card__bottom--Interactive">
@@ -98,14 +100,13 @@
           <div class="feed-card-main">
             <div class="feed__card card-main">
               <div class="feed__card--top">
-                <div >
+                <div>
                   <img class="card__top-avt" src="../../img/avt-01.jpeg" />
                 </div>
                 <div class="card__top-name">
                   <h1>Profile Name</h1>
-                  <p>To serve, drizzle raspberry preserves over each waffle, and top with raspbrries. if whipped cream
-                    to
-                    each waffle.</p>
+                  <p>To serve, drizzle raspberry preserves over each waffle, and top with raspbrries . if whipped cream
+                    to each waffle.</p>
                 </div>
               </div>
               <div>
@@ -113,8 +114,7 @@
               </div>
               <div class="card-bottom">
                 <div class="card__bottom--title">Red Wine and Mint Soufflé</div>
-                <img class="card__bottom--icon"
-                  src="../../img/filled-like-24.png" />
+                <img class="card__bottom--icon" src="../../img/filled-like-24.png" />
                 <div class="card__bottom--description">Apparently we had reached a great height in the atmosphere, for
                   the
                   sky was</div>
@@ -131,7 +131,7 @@
               <ul>
                 <li>Western</li>
                 <li>Quick Lunch</li>
-                <li>Vegies</li>
+                <li class="feed__modal--Veggies">Veggies</li>
               </ul>
               <button class="feed__modal--button">+ Add New Cookbook</button>
             </div>
@@ -185,19 +185,19 @@
         </div>
         <div class="feed__right--contact">
           <h2>Most Active Today</h2>
-          <div>
-            <img src="../../img/avt-01.jpeg" />
-            <img src="../../img/avt-02.jpeg" />
-            <img src="../../img/avt-03.jpeg" />
-            <img src="../../img/avt-01.jpeg" />
-            <img src="../../img/avt-02.jpeg" />
+          <div class="feed__right--avt">
+            <img class="feed__right-avt--one" src="../../img/avt-01.jpeg" />
+            <img class="feed__right-avt--two" src="../../img/avt-02.jpeg" />
+            <img class="feed__right-avt--three" src="../../img/avt-03.jpeg" />
+            <img class="feed__right-avt--four" src="../../img/avt-01.jpeg" />
+            <img class="feed__right-avt--five" src="../../img/avt-02.jpeg" />
           </div>
         </div>
         <div class="feed__right--footer">
           <div>About scratch </div>
           <div>Help Center</div>
           <div>Privacy Policy</div>
-          <div>scratch by invision 2019</div>
+          <div>@ scratch by invision 2019</div>
         </div>
       </div>
     </div>
